--- a/app/views/v5/l2/users/view/capita.html
+++ b/app/views/v5/l2/users/view/capita.html
@@ -20,122 +20,120 @@
 
     <a href="user-add-user-prap-capita" class="govuk-button listing-page">Add a user</a>
 
-  <table class="govuk-table">
-    <thead class="govuk-table__head">
-      <tr class="govuk-table__row">
-        <th scope="col" class="govuk-table__header govuk-!-width-one-third">Name</th>
-        <th scope="col" class="govuk-table__header govuk-!-width-one-third">Email address</th>
-        <th scope="col" class="govuk-table__header">Status</th>
-      </tr>
-    </thead>
+    <table class="govuk-table">
+        <thead class="govuk-table__head">
+            <tr class="govuk-table__row">
+                <th scope="col" class="govuk-table__header govuk-!-width-one-third">Name</th>
+                <th scope="col" class="govuk-table__header govuk-!-width-one-third">Email address</th>
+                <th scope="col" class="govuk-table__header">Status</th>
+            </tr>
+        </thead>
 
-    <tbody class="govuk-table__body">
-      {% if data['organisation-name'] == 'Capita' %}
-      <tr class="govuk-table__row">
-        <th scope="row" class="govuk-table__header">
-            <a href="single" class="govuk-link">
-                {{ data['user-first-name'] }} {{ data['user-last-name'] }}
-            </a>
-        </th>
-        <td class="govuk-table__cell">{{ data['user-email-address'] }}</td>
-        <td class="govuk-table__cell">Pending activation</td>
-      </tr>
-      {% endif %}
+        <tbody class="govuk-table__body">
+            {% if data['organisation-name'] == 'Capita' %}
+                <tr class="govuk-table__row">
+                    <th scope="row" class="govuk-table__header">
+                        <a href="single" class="govuk-link">
+                            {{ data['user-first-name'] }} {{ data['user-last-name'] }}
+                        </a>
+                    </th>
+                    <td class="govuk-table__cell">{{ data['user-email-address'] }}</td>
+                    <td class="govuk-table__cell">Pending activation</td>
+                </tr>
+            {% endif %}
 
-      <tr class="govuk-table__row">
-          <th scope="row" class="govuk-table__header"><a href="single" class="govuk-link">David Batty</a></th>
-          <td class="govuk-table__cell">david.batty@capita.co.uk</td>
-          <td class="govuk-table__cell">Inactive</td>
-        </tr>
+            <tr class="govuk-table__row">
+                <th scope="row" class="govuk-table__header"><a href="single" class="govuk-link">David Batty</a></th>
+                <td class="govuk-table__cell">david.batty@capita.co.uk</td>
+                <td class="govuk-table__cell">Inactive</td>
+            </tr>
 
-      <tr class="govuk-table__row">
-        <th scope="row" class="govuk-table__header"><a href="single" class="govuk-link">Gary Speed</a></th>
-        <td class="govuk-table__cell">gary.speed@capita.co.uk</td>
-        <td class="govuk-table__cell">Inactive</td>
-      </tr>
+            <tr class="govuk-table__row">
+                <th scope="row" class="govuk-table__header"><a href="single" class="govuk-link">Gary Speed</a></th>
+                <td class="govuk-table__cell">gary.speed@capita.co.uk</td>
+                <td class="govuk-table__cell">Inactive</td>
+            </tr>
 
-      <tr class="govuk-table__row">
-        <th scope="row" class="govuk-table__header"><a href="single" class="govuk-link">Gordon Strachan</a></th>
-        <td class="govuk-table__cell">gordon.strachan@capita.co.uk</td>
-        <td class="govuk-table__cell">Pending activation</td>
-      </tr>
+            <tr class="govuk-table__row">
+                <th scope="row" class="govuk-table__header"><a href="single" class="govuk-link">Gordon Strachan</a></th>
+                <td class="govuk-table__cell">gordon.strachan@capita.co.uk</td>
+                <td class="govuk-table__cell">Pending activation</td>
+            </tr>
 
-      <tr class="govuk-table__row">
-        <th scope="row" class="govuk-table__header"><a href="single" class="govuk-link">Gary McAllister</a></th>
-        <td class="govuk-table__cell">gary.mcallister@capita.co.uk</td>
-        <td class="govuk-table__cell">Active</td>
-      </tr>
+            <tr class="govuk-table__row">
+                <th scope="row" class="govuk-table__header"><a href="single" class="govuk-link">Gary McAllister</a></th>
+                <td class="govuk-table__cell">gary.mcallister@capita.co.uk</td>
+                <td class="govuk-table__cell">Active</td>
+            </tr>
 
-      <tr class="govuk-table__row">
-        <th scope="row" class="govuk-table__header"><a href="single" class="govuk-link">Tony Dorigo</a></th>
-        <td class="govuk-table__cell">tony.dorigo@capita.co.uk</td>
-        <td class="govuk-table__cell">Active</td>
-      </tr>
+            <tr class="govuk-table__row">
+                <th scope="row" class="govuk-table__header"><a href="single" class="govuk-link">Tony Dorigo</a></th>
+                <td class="govuk-table__cell">tony.dorigo@capita.co.uk</td>
+                <td class="govuk-table__cell">Active</td>
+            </tr>
 
-      <tr class="govuk-table__row">
-        <th scope="row" class="govuk-table__header"><a href="single" class="govuk-link">Mel Sterland</a></th>
-        <td class="govuk-table__cell">mel.sterland@capita.co.uk</td>
-        <td class="govuk-table__cell">Active</td>
-      </tr>
+            <tr class="govuk-table__row">
+                <th scope="row" class="govuk-table__header"><a href="single" class="govuk-link">Mel Sterland</a></th>
+                <td class="govuk-table__cell">mel.sterland@capita.co.uk</td>
+                <td class="govuk-table__cell">Active</td>
+            </tr>
 
+            <tr class="govuk-table__row">
+                <th scope="row" class="govuk-table__header"><a href="single" class="govuk-link">Rod Wallace</a></th>
+                <td class="govuk-table__cell">rod.wallace@capita.co.uk</td>
+                <td class="govuk-table__cell">Active</td>
+            </tr>
 
+            <tr class="govuk-table__row">
+                <th scope="row" class="govuk-table__header"><a href="single" class="govuk-link">Lee Chapman</a></th>
+                <td class="govuk-table__cell">lee.chapman@capita.co.uk</td>
+                <td class="govuk-table__cell">Active</td>
+            </tr>
 
-      <tr class="govuk-table__row">
-        <th scope="row" class="govuk-table__header"><a href="single" class="govuk-link">Rod Wallace</a></th>
-        <td class="govuk-table__cell">rod.wallace@capita.co.uk</td>
-        <td class="govuk-table__cell">Active</td>
-      </tr>
+            <tr class="govuk-table__row">
+                <th scope="row" class="govuk-table__header"><a href="single" class="govuk-link">Steve Hodge</a></th>
+                <td class="govuk-table__cell">steve.hodge@capita.co.uk</td>
+                <td class="govuk-table__cell ">Active</td>
+            </tr>
 
-      <tr class="govuk-table__row">
-        <th scope="row" class="govuk-table__header"><a href="single" class="govuk-link">Lee Chapman</a></th>
-        <td class="govuk-table__cell">lee.chapman@capita.co.uk</td>
-        <td class="govuk-table__cell">Active</td>
-      </tr>
+            <tr class="govuk-table__row">
+                <th scope="row" class="govuk-table__header"><a href="single" class="govuk-link">John Lukic</a></th>
+                <td class="govuk-table__cell">john.lukic@capita.co.uk</td>
+                <td class="govuk-table__cell ">Active</td>
+            </tr>
+        </tbody>
+    </table>
 
-      <tr class="govuk-table__row">
-        <th scope="row" class="govuk-table__header"><a href="single" class="govuk-link">Steve Hodge</a></th>
-        <td class="govuk-table__cell">steve.hodge@capita.co.uk</td>
-        <td class="govuk-table__cell ">Active</td>
-      </tr>
+    <nav role="navigation" aria-label="Pagination">
+        <div class="pagination__summary">
+            Showing 1 &ndash; 10 of 13 users
+        </div>
 
-      <tr class="govuk-table__row">
-          <th scope="row" class="govuk-table__header"><a href="single" class="govuk-link">John Lukic</a></th>
-          <td class="govuk-table__cell">john.lukic@capita.co.uk</td>
-          <td class="govuk-table__cell ">Active</td>
-        </tr>
-    </tbody>
-  </table>
+        <ul class="pagination">
 
-  <nav role="navigation" aria-label="Pagination">
-    <div class="pagination__summary">
-      Showing 1 &ndash; 10 of 13 users
-    </div>
+            <li class="pagination__item">
+                <a class="pagination__link disabled" aria-label="Previous page">
+                    <span aria-hidden="true" role="presentation">&laquo;</span> Previous
+                </a>
+            </li>
 
-    <ul class="pagination">
+            <li class="pagination__item">
+                <span class="pagination__link current" aria-label="Page 1">1</span>
+            </li>
 
-        <li class="pagination__item">
-            <a class="pagination__link disabled" aria-label="Previous page">
-              <span aria-hidden="true" role="presentation">&laquo;</span> Previous
-            </a>
-          </li>
+            <li class="pagination__item">
+                <a class="pagination__link" href="capita-2" aria-label="Page 2">2</a>
+            </li>
 
-      <li class="pagination__item">
-        <span class="pagination__link current" aria-label="Page 1">1</span>
-      </li>
+            <li class="pagination__item">
+                <a class="pagination__link" href="capita-2" aria-label="Next page">
+                    Next <span aria-hidden="true" role="presentation">&raquo;</span>
+                </a>
+            </li>
+        </ul>
+    </nav>
 
-      <li class="pagination__item">
-        <a class="pagination__link" href="user-list-prap-capita-2" aria-label="Page 2">2</a>
-      </li>
-
-      <li class="pagination__item">
-        <a class="pagination__link" href="user-list-prap-capita-2" aria-label="Next page">
-          Next <span aria-hidden="true" role="presentation">&raquo;</span>
-        </a>
-      </li>
-    </ul>
-  </nav>
-
-  <p class="govuk-!-margin-top-9">
-    <a href="dashboard-service-prap" class="govuk-link">Back to dashboard</a>
-  </p>
+    <p class="govuk-!-margin-top-9">
+        <a href="../../dashboard" class="govuk-link">Back to dashboard</a>
+    </p>
 {% endblock %}
