--- a/app/views/v5/l2/users/view/g4s-2.html
+++ b/app/views/v5/l2/users/view/g4s-2.html
@@ -21,82 +21,77 @@
 
     <a href="user-add-user-prap-g3s" class="govuk-button listing-page">Add a user</a>
 
-  <table class="govuk-table">
-    <thead class="govuk-table__head">
-      <tr class="govuk-table__row">
-        <th scope="col" class="govuk-table__header govuk-!-width-one-third">Name</th>
-        <th scope="col" class="govuk-table__header govuk-!-width-one-third">Email address</th>
-        <th scope="col" class="govuk-table__header">Status</th>
-      </tr>
-    </thead>
+    <table class="govuk-table">
+        <thead class="govuk-table__head">
+            <tr class="govuk-table__row">
+                <th scope="col" class="govuk-table__header govuk-!-width-one-third">Name</th>
+                <th scope="col" class="govuk-table__header govuk-!-width-one-third">Email address</th>
+                <th scope="col" class="govuk-table__header">Status</th>
+            </tr>
+        </thead>
 
-    <tbody class="govuk-table__body">
+        <tbody class="govuk-table__body">
+            <tr class="govuk-table__row">
+                <th scope="row" class="govuk-table__header"><a href="single" class="govuk-link">Bruce Sandison</a></th>
+                <td class="govuk-table__cell">bruce.sandison@g4s.co.uk</td>
+                <td class="govuk-table__cell">Inactive</td>
+            </tr>
 
+            <tr class="govuk-table__row">
+                <th scope="row" class="govuk-table__header"><a href="single" class="govuk-link">Rex Hunt</a></th>
+                <td class="govuk-table__cell">rex.hunt@g4s.co.uk</td>
+                <td class="govuk-table__cell">Pending activation</td>
+            </tr>
 
-      <tr class="govuk-table__row">
-        <th scope="row" class="govuk-table__header"><a href="single" class="govuk-link">Bruce Sandison</a></th>
-        <td class="govuk-table__cell">bruce.sandison@g4s.co.uk</td>
-        <td class="govuk-table__cell">Inactive</td>
-      </tr>
+            <tr class="govuk-table__row">
+                <th scope="row" class="govuk-table__header"><a href="single" class="govuk-link">Robson Green</a></th>
+                <td class="govuk-table__cell">robson.green@g4s.co.uk</td>
+                <td class="govuk-table__cell">Active</td>
+            </tr>
 
-      <tr class="govuk-table__row">
-        <th scope="row" class="govuk-table__header"><a href="single" class="govuk-link">Rex Hunt</a></th>
-        <td class="govuk-table__cell">rex.hunt@g4s.co.uk</td>
-        <td class="govuk-table__cell">Pending activation</td>
-      </tr>
+            <tr class="govuk-table__row">
+                <th scope="row" class="govuk-table__header"><a href="single" class="govuk-link">Dean Macey</a></th>
+                <td class="govuk-table__cell">dean.macey@g4s.co.uk</td>
+                <td class="govuk-table__cell">Active</td>
+            </tr>
 
-      <tr class="govuk-table__row">
-        <th scope="row" class="govuk-table__header"><a href="single" class="govuk-link">Robson Green</a></th>
-        <td class="govuk-table__cell">robson.green@g4s.co.uk</td>
-        <td class="govuk-table__cell">Active</td>
-      </tr>
+            <tr class="govuk-table__row">
+                <th scope="row" class="govuk-table__header"><a href="single" class="govuk-link">Ali Hamidi</a></th>
+                <td class="govuk-table__cell">ali.hamidi@g4s.co.uk</td>
+                <td class="govuk-table__cell">Active</td>
+            </tr>
+        </tbody>
+    </table>
 
-      <tr class="govuk-table__row">
-        <th scope="row" class="govuk-table__header"><a href="single" class="govuk-link">Dean Macey</a></th>
-        <td class="govuk-table__cell">dean.macey@g4s.co.uk</td>
-        <td class="govuk-table__cell">Active</td>
-      </tr>
+    <nav role="navigation" aria-label="Pagination">
+        <div class="pagination__summary">
+            Showing 10 &ndash; 15 of 15 users
+        </div>
 
+        <ul class="pagination">
+            <li class="pagination__item">
+                <a class="pagination__link" href="g4s" aria-label="Previous page">
+                    <span aria-hidden="true" role="presentation">&laquo;</span> Previous
+                </a>
+            </li>
 
-      <tr class="govuk-table__row">
-            <th scope="row" class="govuk-table__header"><a href="single" class="govuk-link">Ali Hamidi</a></th>
-            <td class="govuk-table__cell">ali.hamidi@g4s.co.uk</td>
-            <td class="govuk-table__cell">Active</td>
-          </tr>
+            <li class="pagination__item">
+                <a class="pagination__link" href="g4s" aria-label="Page 1">1</a>
+            </li>
 
+            <li class="pagination__item">
+                <span class="pagination__link current" aria-label="Page 2">2</span>
+            </li>
 
-    </tbody>
-  </table>
+            <li class="pagination__item">
+                <span class="pagination__link disabled" aria-label="Next page">
+                    Next <span aria-hidden="true" role="presentation">&raquo;</span>
+                </span>
+            </li>
+        </ul>
+    </nav>
 
-  <nav role="navigation" aria-label="Pagination">
-    <div class="pagination__summary">
-      Showing 10 &ndash; 15 of 15 users
-    </div>
-
-    <ul class="pagination">
-      <li class="pagination__item">
-        <a class="pagination__link" href="user-list-prap-g3s" aria-label="Previous page">
-          <span aria-hidden="true" role="presentation">&laquo;</span> Previous
-        </a>
-      </li>
-
-      <li class="pagination__item">
-        <a class="pagination__link" href="user-list-prap-g3s" aria-label="Page 1">1</a>
-      </li>
-
-      <li class="pagination__item">
-        <span class="pagination__link current" aria-label="Page 2">2</span>
-      </li>
-
-      <li class="pagination__item">
-        <span class="pagination__link disabled"  aria-label="Next page">
-          Next <span aria-hidden="true" role="presentation">&raquo;</span>
-        </span>
-      </li>
-    </ul>
-  </nav>
-
-  <p class="govuk-!-margin-top-9">
-    <a href="dashboard-service-prap" class="govuk-link">Back to dashboard</a>
-  </p>
+    <p class="govuk-!-margin-top-9">
+        <a href="../../dashboard" class="govuk-link">Back to dashboard</a>
+    </p>
 {% endblock %}
