--- a/app/views/v5/l2/users/view/g4s.html
+++ b/app/views/v5/l2/users/view/g4s.html
@@ -19,121 +19,121 @@
         Users
     </h1>
 
-    <a href="user-add-user-prap-g3s" class="govuk-button listing-page">Add a user</a>
+    <a href="user-add-user-prap-g4s" class="govuk-button listing-page">Add a user</a>
 
-  <table class="govuk-table">
-    <thead class="govuk-table__head">
-      <tr class="govuk-table__row">
-        <th scope="col" class="govuk-table__header govuk-!-width-one-third">Name</th>
-        <th scope="col" class="govuk-table__header govuk-!-width-one-third">Email address</th>
-        <th scope="col" class="govuk-table__header">Status</th>
-      </tr>
-    </thead>
-
-    <tbody class="govuk-table__body">
-      {% if data['organisation-name'] == 'G4S' %}
-      <tr class="govuk-table__row">
-        <th scope="row" class="govuk-table__header">
-            <a href="single" class="govuk-link">
-                {{ data['user-first-name'] }} {{ data['user-last-name'] }}
-            </a>
-        </th>
-        <td class="govuk-table__cell">{{ data['user-email-address'] }}</td>
-        <td class="govuk-table__cell">Pending activation</td>
-      </tr>
-      {% endif %}
-
-      <tr class="govuk-table__row">
-        <th scope="row" class="govuk-table__header"><a href="single" class="govuk-link">Matt Hayes</a></th>
-        <td class="govuk-table__cell">matt.hayes@g4s.co.uk</td>
-        <td class="govuk-table__cell">Inactive</td>
-      </tr>
-
-      <tr class="govuk-table__row">
-        <th scope="row" class="govuk-table__header"><a href="single" class="govuk-link">Mick Brown</a></th>
-        <td class="govuk-table__cell">mick.brown@g4s.co.uk</td>
-        <td class="govuk-table__cell">Pending activation</td>
-      </tr>
-
-      <tr class="govuk-table__row">
-        <th scope="row" class="govuk-table__header"><a href="single" class="govuk-link">April Vokey</a></th>
-        <td class="govuk-table__cell">april.vokey@g4s.co.uk</td>
-        <td class="govuk-table__cell">Active</td>
-      </tr>
-
-      <tr class="govuk-table__row">
-        <th scope="row" class="govuk-table__header"><a href="single" class="govuk-link">John Wilson</a></th>
-        <td class="govuk-table__cell">john.wilson@g4s.co.uk</td>
-        <td class="govuk-table__cell">Active</td>
-      </tr>
-
-      <tr class="govuk-table__row">
-        <th scope="row" class="govuk-table__header"><a href="single" class="govuk-link">Paul Young</a></th>
-        <td class="govuk-table__cell">paul.young@g4s.co.uk</td>
-        <td class="govuk-table__cell">Active</td>
-      </tr>
-
-      <tr class="govuk-table__row">
-        <th scope="row" class="govuk-table__header"><a href="single" class="govuk-link">Marina Gibson</a></th>
-        <td class="govuk-table__cell">marina.gibson@g4s.co.uk</td>
-        <td class="govuk-table__cell">Inactive</td>
-      </tr>
-
-      <tr class="govuk-table__row">
-        <th scope="row" class="govuk-table__header"><a href="single" class="govuk-link">Jeremy Wade</a></th>
-        <td class="govuk-table__cell">jeremy.wade@g4s.co.uk</td>
-        <td class="govuk-table__cell">Active</td>
-      </tr>
-
-      <tr class="govuk-table__row">
-        <th scope="row" class="govuk-table__header"><a href="single" class="govuk-link">Neville Fickling</a></th>
-        <td class="govuk-table__cell">neville.fickling@g4s.co.uk</td>
-        <td class="govuk-table__cell">Active</td>
-      </tr>
-
-      <tr class="govuk-table__row">
-        <th scope="row" class="govuk-table__header"><a href="single" class="govuk-link">Bob Nudd</a></th>
-        <td class="govuk-table__cell">bob.nudd@g4s.co.uk</td>
-        <td class="govuk-table__cell ">Active</td>
-      </tr>
-
-      <tr class="govuk-table__row">
-          <th scope="row" class="govuk-table__header"><a href="single" class="govuk-link">Robert Church</a></th>
-          <td class="govuk-table__cell">robert.church@g4s.co.uk</td>
-          <td class="govuk-table__cell ">Active</td>
+    <table class="govuk-table">
+        <thead class="govuk-table__head">
+        <tr class="govuk-table__row">
+            <th scope="col" class="govuk-table__header govuk-!-width-one-third">Name</th>
+            <th scope="col" class="govuk-table__header govuk-!-width-one-third">Email address</th>
+            <th scope="col" class="govuk-table__header">Status</th>
         </tr>
-    </tbody>
-  </table>
+        </thead>
 
-  <nav role="navigation" aria-label="Pagination">
-    <div class="pagination__summary">
-      Showing 1 &ndash; 10 of 15 users
-    </div>
+        <tbody class="govuk-table__body">
+            {% if data['organisation-name'] == 'G4S' %}
+                <tr class="govuk-table__row">
+                    <th scope="row" class="govuk-table__header">
+                        <a href="single" class="govuk-link">
+                            {{ data['user-first-name'] }} {{ data['user-last-name'] }}
+                        </a>
+                    </th>
+                    <td class="govuk-table__cell">{{ data['user-email-address'] }}</td>
+                    <td class="govuk-table__cell">Pending activation</td>
+                </tr>
+            {% endif %}
 
-    <ul class="pagination">
-      <li class="pagination__item">
-        <span class="pagination__link disabled" aria-label="Previous page">
-          <span aria-hidden="true" role="presentation">&laquo;</span> Previous
-        </span>
-      </li>
+            <tr class="govuk-table__row">
+                <th scope="row" class="govuk-table__header"><a href="single" class="govuk-link">Matt Hayes</a></th>
+                <td class="govuk-table__cell">matt.hayes@g4s.co.uk</td>
+                <td class="govuk-table__cell">Inactive</td>
+            </tr>
 
-      <li class="pagination__item">
-        <span class="pagination__link current" aria-label="Page 1">1</span>
-      </li>
+            <tr class="govuk-table__row">
+                <th scope="row" class="govuk-table__header"><a href="single" class="govuk-link">Mick Brown</a></th>
+                <td class="govuk-table__cell">mick.brown@g4s.co.uk</td>
+                <td class="govuk-table__cell">Pending activation</td>
+            </tr>
 
-      <li class="pagination__item">
-        <a class="pagination__link" href="user-list-prap-g3s-2" aria-label="Page 2">2</a>
-      </li>
+            <tr class="govuk-table__row">
+                <th scope="row" class="govuk-table__header"><a href="single" class="govuk-link">April Vokey</a></th>
+                <td class="govuk-table__cell">april.vokey@g4s.co.uk</td>
+                <td class="govuk-table__cell">Active</td>
+            </tr>
 
-      <li class="pagination__item">
-        <a class="pagination__link" href="user-list-prap-g3s-2" aria-label="Next page">
-          Next <span aria-hidden="true" role="presentation">&raquo;</span>
-        </a>
-      </li>
-    </ul>
-  </nav>
+            <tr class="govuk-table__row">
+                <th scope="row" class="govuk-table__header"><a href="single" class="govuk-link">John Wilson</a></th>
+                <td class="govuk-table__cell">john.wilson@g4s.co.uk</td>
+                <td class="govuk-table__cell">Active</td>
+            </tr>
 
-  <p class="govuk-!-margin-top-9">
-    <a href="dashboard-service-prap" class="govuk-link">Back to dashboard</a>
-  </p>
+            <tr class="govuk-table__row">
+                <th scope="row" class="govuk-table__header"><a href="single" class="govuk-link">Paul Young</a></th>
+                <td class="govuk-table__cell">paul.young@g4s.co.uk</td>
+                <td class="govuk-table__cell">Active</td>
+            </tr>
+
+            <tr class="govuk-table__row">
+                <th scope="row" class="govuk-table__header"><a href="single" class="govuk-link">Marina Gibson</a></th>
+                <td class="govuk-table__cell">marina.gibson@g4s.co.uk</td>
+                <td class="govuk-table__cell">Inactive</td>
+            </tr>
+
+            <tr class="govuk-table__row">
+                <th scope="row" class="govuk-table__header"><a href="single" class="govuk-link">Jeremy Wade</a></th>
+                <td class="govuk-table__cell">jeremy.wade@g4s.co.uk</td>
+                <td class="govuk-table__cell">Active</td>
+            </tr>
+
+            <tr class="govuk-table__row">
+                <th scope="row" class="govuk-table__header"><a href="single" class="govuk-link">Neville Fickling</a></th>
+                <td class="govuk-table__cell">neville.fickling@g4s.co.uk</td>
+                <td class="govuk-table__cell">Active</td>
+            </tr>
+
+            <tr class="govuk-table__row">
+                <th scope="row" class="govuk-table__header"><a href="single" class="govuk-link">Bob Nudd</a></th>
+                <td class="govuk-table__cell">bob.nudd@g4s.co.uk</td>
+                <td class="govuk-table__cell ">Active</td>
+            </tr>
+
+            <tr class="govuk-table__row">
+                <th scope="row" class="govuk-table__header"><a href="single" class="govuk-link">Robert Church</a></th>
+                <td class="govuk-table__cell">robert.church@g4s.co.uk</td>
+                <td class="govuk-table__cell ">Active</td>
+            </tr>
+        </tbody>
+    </table>
+
+    <nav role="navigation" aria-label="Pagination">
+        <div class="pagination__summary">
+        Showing 1 &ndash; 10 of 15 users
+        </div>
+
+        <ul class="pagination">
+            <li class="pagination__item">
+                <span class="pagination__link disabled" aria-label="Previous page">
+                    <span aria-hidden="true" role="presentation">&laquo;</span> Previous
+                </span>
+            </li>
+
+            <li class="pagination__item">
+                <span class="pagination__link current" aria-label="Page 1">1</span>
+            </li>
+
+            <li class="pagination__item">
+                <a class="pagination__link" href="g4s-2" aria-label="Page 2">2</a>
+            </li>
+
+            <li class="pagination__item">
+                <a class="pagination__link" href="g4s-2" aria-label="Next page">
+                    Next <span aria-hidden="true" role="presentation">&raquo;</span>
+                </a>
+            </li>
+        </ul>
+    </nav>
+
+    <p class="govuk-!-margin-top-9">
+        <a href="../../dashboard" class="govuk-link">Back to dashboard</a>
+    </p>
 {% endblock %}
