--- a/app/views/v5/l2/users/view/remploy-2.html
+++ b/app/views/v5/l2/users/view/remploy-2.html
@@ -9,7 +9,7 @@
 {% endblock %}
 
 {% block beforeContent %}
-  {% include 'includes/back-button.njk' %}
+    {% include 'includes/back-button.njk' %}
 {% endblock %}
 
 {% block content %}
@@ -20,119 +20,111 @@
 
     <a href="user-add-user-prap-remploy" class="govuk-button listing-page">Add a user</a>
 
-  <table class="govuk-table">
-    <thead class="govuk-table__head">
-      <tr class="govuk-table__row">
-        <th scope="col" class="govuk-table__header govuk-!-width-one-third">Name</th>
-        <th scope="col" class="govuk-table__header govuk-!-width-one-third">Email address</th>
-        <th scope="col" class="govuk-table__header">Status</th>
-      </tr>
-    </thead>
+    <table class="govuk-table">
+        <thead class="govuk-table__head">
+            <tr class="govuk-table__row">
+                <th scope="col" class="govuk-table__header govuk-!-width-one-third">Name</th>
+                <th scope="col" class="govuk-table__header govuk-!-width-one-third">Email address</th>
+                <th scope="col" class="govuk-table__header">Status</th>
+            </tr>
+        </thead>
 
-    <tbody class="govuk-table__body">
+        <tbody class="govuk-table__body">
+            <tr class="govuk-table__row">
+                <th scope="row" class="govuk-table__header"><a href="single" class="govuk-link">Janet Sheridan</a></th>
+                <td class="govuk-table__cell">amy.whitlow@remploy.co.uk</td>
+                <td class="govuk-table__cell">Active</td>
+            </tr>
 
+            <tr class="govuk-table__row">
+                <th scope="row" class="govuk-table__header"><a href="single" class="govuk-link">Mervyn Day</a></th>
+                <td class="govuk-table__cell">peter.haddock@remploy.co.uk</td>
+                <td class="govuk-table__cell">Active</td>
+            </tr>
 
+            <tr class="govuk-table__row">
+                <th scope="row" class="govuk-table__header"><a href="single" class="govuk-link">Robert Molenaar</a></th>
+                <td class="govuk-table__cell">john.mcclelland@remploy.co.uk</td>
+                <td class="govuk-table__cell">Active</td>
+            </tr>
 
+            <tr class="govuk-table__row">
+                <th scope="row" class="govuk-table__header"><a href="single" class="govuk-link">Nigella Worthington</a></th>
+                <td class="govuk-table__cell">debbie.kerr@remploy.co.uk</td>
+                <td class="govuk-table__cell">Active</td>
+            </tr>
 
-      <tr class="govuk-table__row">
-        <th scope="row" class="govuk-table__header"><a href="single" class="govuk-link">Janet Sheridan</a></th>
-        <td class="govuk-table__cell">amy.whitlow@remploy.co.uk</td>
-        <td class="govuk-table__cell">Active</td>
-      </tr>
+            <tr class="govuk-table__row">
+                <th scope="row" class="govuk-table__header"><a href="single" class="govuk-link">David Rocastle</a></th>
+                <td class="govuk-table__cell">bill.fotherby@remploy.co.uk</td>
+                <td class="govuk-table__cell">Active</td>
+            </tr>
 
-      <tr class="govuk-table__row">
-        <th scope="row" class="govuk-table__header"><a href="single" class="govuk-link">Mervyn Day</a></th>
-        <td class="govuk-table__cell">peter.haddock@remploy.co.uk</td>
-        <td class="govuk-table__cell">Active</td>
-      </tr>
+            <tr class="govuk-table__row">
+                <th scope="row" class="govuk-table__header"><a href="single" class="govuk-link">David White</a></th>
+                <td class="govuk-table__cell">mary.hennigan@remploy.co.uk</td>
+                <td class="govuk-table__cell">Active</td>
+            </tr>
 
-      <tr class="govuk-table__row">
-        <th scope="row" class="govuk-table__header"><a href="single" class="govuk-link">Robert Molenaar</a></th>
-        <td class="govuk-table__cell">john.mcclelland@remploy.co.uk</td>
-        <td class="govuk-table__cell">Active</td>
-      </tr>
+            <tr class="govuk-table__row">
+                <th scope="row" class="govuk-table__header"><a href="single" class="govuk-link">Catherine Palmer</a></th>
+                <td class="govuk-table__cell">david.weatherall@remploy.co.uk</td>
+                <td class="govuk-table__cell">Active</td>
+            </tr>
 
-      <tr class="govuk-table__row">
-        <th scope="row" class="govuk-table__header"><a href="single" class="govuk-link">Nigella Worthington</a></th>
-        <td class="govuk-table__cell">debbie.kerr@remploy.co.uk</td>
-        <td class="govuk-table__cell">Active</td>
-      </tr>
+            <tr class="govuk-table__row">
+                <th scope="row" class="govuk-table__header"><a href="single" class="govuk-link">Carl Shutt</a></th>
+                <td class="govuk-table__cell">carl.shutt@remploy.co.uk</td>
+                <td class="govuk-table__cell ">Active</td>
+            </tr>
 
-      <tr class="govuk-table__row">
-        <th scope="row" class="govuk-table__header"><a href="single" class="govuk-link">David Rocastle</a></th>
-        <td class="govuk-table__cell">bill.fotherby@remploy.co.uk</td>
-        <td class="govuk-table__cell">Active</td>
-      </tr>
+            <tr class="govuk-table__row">
+                <th scope="row" class="govuk-table__header"><a href="single" class="govuk-link">Chris Kamara</a></th>
+                <td class="govuk-table__cell">chris.kamara@remploy.co.uk</td>
+                <td class="govuk-table__cell ">Active</td>
+            </tr>
 
-      <tr class="govuk-table__row">
-        <th scope="row" class="govuk-table__header"><a href="single" class="govuk-link">David White</a></th>
-        <td class="govuk-table__cell">mary.hennigan@remploy.co.uk</td>
-        <td class="govuk-table__cell">Active</td>
-      </tr>
+            <tr class="govuk-table__row">
+                <th scope="row" class="govuk-table__header"><a href="single" class="govuk-link">Imre Varadi</a></th>
+                <td class="govuk-table__cell">imre.varadi@remploy.co.uk</td>
+                <td class="govuk-table__cell ">Active</td>
+            </tr>
+        </tbody>
+    </table>
 
-      <tr class="govuk-table__row">
-        <th scope="row" class="govuk-table__header"><a href="single" class="govuk-link">Catherine Palmer</a></th>
-        <td class="govuk-table__cell">david.weatherall@remploy.co.uk</td>
-        <td class="govuk-table__cell">Active</td>
-      </tr>
+    <nav role="navigation" aria-label="Pagination">
+        <div class="pagination__summary">
+            Showing 10 &ndash; 20 of 23 users
+        </div>
 
-      <tr class="govuk-table__row">
-        <th scope="row" class="govuk-table__header"><a href="single" class="govuk-link">Carl Shutt</a></th>
-        <td class="govuk-table__cell">carl.shutt@remploy.co.uk</td>
-        <td class="govuk-table__cell ">Active</td>
-      </tr>
+        <ul class="pagination">
+            <li class="pagination__item">
+                <a class="pagination__link" href="remploy"  aria-label="Previous page">
+                    <span aria-hidden="true" role="presentation">&laquo;</span> Previous
+                </a>
+            </li>
 
+            <li class="pagination__item">
+                <a class="pagination__link" href="remploy" aria-label="Page 1">1</a>
+            </li>
 
-      <tr class="govuk-table__row">
-          <th scope="row" class="govuk-table__header"><a href="single" class="govuk-link">Chris Kamara</a></th>
-          <td class="govuk-table__cell">chris.kamara@remploy.co.uk</td>
-          <td class="govuk-table__cell ">Active</td>
-        </tr>
+            <li class="pagination__item">
+                <span class="pagination__link current"  aria-label="Page 2">2</span>
+            </li>
 
+            <li class="pagination__item">
+                <a class="pagination__link" href="remploy-3" aria-label="Page 3">3</a>
+            </li>
 
-        <tr class="govuk-table__row">
-            <th scope="row" class="govuk-table__header"><a href="single" class="govuk-link">Imre Varadi</a></th>
-            <td class="govuk-table__cell">imre.varadi@remploy.co.uk</td>
-            <td class="govuk-table__cell ">Active</td>
-          </tr>
+            <li class="pagination__item">
+                <a class="pagination__link" href="remploy-3" aria-label="Next page">
+                    Next <span aria-hidden="true" role="presentation">&raquo;</span>
+                </a>
+            </li>
+        </ul>
+    </nav>
 
-    </tbody>
-  </table>
-
-  <nav role="navigation" aria-label="Pagination">
-    <div class="pagination__summary">
-      Showing 10 &ndash; 20 of 23 users
-    </div>
-
-    <ul class="pagination">
-
-        <li class="pagination__item">
-            <a class="pagination__link" href="user-list-prap-remploy"  aria-label="Previous page">
-              <span aria-hidden="true" role="presentation">&laquo;</span> Previous
-            </a>
-          </li>
-
-      <li class="pagination__item">
-        <a class="pagination__link" href="user-list-prap-remploy" aria-label="Page 1">1</a>
-      </li>
-
-      <li class="pagination__item">
-        <span class="pagination__link current"  aria-label="Page 2">2</span>
-      </li>
-
-      <li class="pagination__item">
-          <a class="pagination__link" href="user-list-prap-remploy-3" aria-label="Page 3">3</a>
-        </li>
-
-      <li class="pagination__item">
-        <a class="pagination__link" href="user-list-prap-remploy-3" aria-label="Next page">
-          Next <span aria-hidden="true" role="presentation">&raquo;</span>
-        </a>
-      </li>
-    </ul>
-  </nav>
-
-  <p class="govuk-!-margin-top-9">
-    <a href="dashboard-service-prap" class="govuk-link">Back to dashboard</a>
-  </p>
+    <p class="govuk-!-margin-top-9">
+        <a href="../../dashboard" class="govuk-link">Back to dashboard</a>
+    </p>
 {% endblock %}
