--- a/app/views/v5/l2/users/view/remploy-3.html
+++ b/app/views/v5/l2/users/view/remploy-3.html
@@ -20,75 +20,69 @@
 
     <a href="user-add-user-prap-remploy" class="govuk-button listing-page">Add a user</a>
 
-  <table class="govuk-table">
-    <thead class="govuk-table__head">
-      <tr class="govuk-table__row">
-        <th scope="col" class="govuk-table__header govuk-!-width-one-third">Name</th>
-        <th scope="col" class="govuk-table__header govuk-!-width-one-third">Email address</th>
-        <th scope="col" class="govuk-table__header">Status</th>
-      </tr>
-    </thead>
+    <table class="govuk-table">
+        <thead class="govuk-table__head">
+            <tr class="govuk-table__row">
+                <th scope="col" class="govuk-table__header govuk-!-width-one-third">Name</th>
+                <th scope="col" class="govuk-table__header govuk-!-width-one-third">Email address</th>
+                <th scope="col" class="govuk-table__header">Status</th>
+            </tr>
+        </thead>
 
-    <tbody class="govuk-table__body">
+        <tbody class="govuk-table__body">
+            <tr class="govuk-table__row">
+                <th scope="row" class="govuk-table__header"><a href="single" class="govuk-link">Phil Masinga</a></th>
+                <td class="govuk-table__cell">phil.masinga@remploy.co.uk</td>
+                <td class="govuk-table__cell">Active</td>
+            </tr>
 
+            <tr class="govuk-table__row">
+                <th scope="row" class="govuk-table__header"><a href="single" class="govuk-link">David Hopkin</a></th>
+                <td class="govuk-table__cell">david.hopkin@remploy.co.uk</td>
+                <td class="govuk-table__cell">Active</td>
+            </tr>
 
-      <tr class="govuk-table__row">
-        <th scope="row" class="govuk-table__header"><a href="single" class="govuk-link">Phil Masinga</a></th>
-        <td class="govuk-table__cell">phil.masinga@remploy.co.uk</td>
-        <td class="govuk-table__cell">Active</td>
-      </tr>
+            <tr class="govuk-table__row">
+                <th scope="row" class="govuk-table__header"><a href="single" class="govuk-link">Brian Deane</a></th>
+                <td class="govuk-table__cell">brian.deane@remploy.co.uk</td>
+                <td class="govuk-table__cell">Active</td>
+            </tr>
+        </tbody>
+    </table>
 
-      <tr class="govuk-table__row">
-        <th scope="row" class="govuk-table__header"><a href="single" class="govuk-link">David Hopkin</a></th>
-        <td class="govuk-table__cell">david.hopkin@remploy.co.uk</td>
-        <td class="govuk-table__cell">Active</td>
-      </tr>
+    <nav role="navigation" aria-label="Pagination">
+        <div class="pagination__summary">
+            Showing 20 &ndash; 23 of 23 users
+        </div>
 
-      <tr class="govuk-table__row">
-        <th scope="row" class="govuk-table__header"><a href="single" class="govuk-link">Brian Deane</a></th>
-        <td class="govuk-table__cell">brian.deane@remploy.co.uk</td>
-        <td class="govuk-table__cell">Active</td>
-      </tr>
+        <ul class="pagination">
+            <li class="pagination__item">
+                <a class="pagination__link" href="remploy-2"  aria-label="Previous page">
+                    <span aria-hidden="true" role="presentation">&laquo;</span> Previous
+                </a>
+            </li>
 
+            <li class="pagination__item">
+                <a class="pagination__link" href="remploy" aria-label="Page 1">1</a>
+            </li>
 
-    </tbody>
-  </table>
+            <li class="pagination__item">
+                <a class="pagination__link" href="remploy-2" aria-label="Page 2">2</a>
+            </li>
 
-  <nav role="navigation" aria-label="Pagination">
-    <div class="pagination__summary">
-      Showing 20 &ndash; 23 of 23 users
-    </div>
+            <li class="pagination__item">
+                <span class="pagination__link current" aria-label="Page 3">3</span>
+            </li>
 
-    <ul class="pagination">
+            <li class="pagination__item">
+                <a class="pagination__link disabled" href="remploy-2" aria-label="Next page">
+                    Next <span aria-hidden="true" role="presentation">&raquo;</span>
+                </a>
+            </li>
+        </ul>
+    </nav>
 
-        <li class="pagination__item">
-            <a class="pagination__link" href="user-list-prap-remploy-2"  aria-label="Previous page">
-              <span aria-hidden="true" role="presentation">&laquo;</span> Previous
-            </a>
-          </li>
-
-
-      <li class="pagination__item">
-        <a class="pagination__link" href="user-list-prap-remploy" aria-label="Page 1">1</a>
-      </li>
-
-      <li class="pagination__item">
-        <a class="pagination__link" href="user-list-prap-remploy-2" aria-label="Page 2">2</a>
-      </li>
-
-      <li class="pagination__item">
-          <span class="pagination__link current"  aria-label="Page 3">3</span>
-        </li>
-
-      <li class="pagination__item">
-        <a class="pagination__link disabled" href="user-list-prap-remploy-2" aria-label="Next page">
-          Next <span aria-hidden="true" role="presentation">&raquo;</span>
-        </a>
-      </li>
-    </ul>
-  </nav>
-
-  <p class="govuk-!-margin-top-9">
-    <a href="dashboard-service-prap" class="govuk-link">Back to dashboard</a>
-  </p>
+    <p class="govuk-!-margin-top-9">
+        <a href="../../dashboard" class="govuk-link">Back to dashboard</a>
+    </p>
 {% endblock %}
